--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HackQ — Live answers to HQ Trivia!</title>
+  <title>HackQ</title>
   <link rel="stylesheet" media="screen" href="css/style.css">
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
 </head>
